--- a/templates/watch.html
+++ b/templates/watch.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ content.title }} - Watch</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <h1>Now Watching: {{ content.title }}</h1>
