--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Noflix</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <h1>Welcome to Notflix</h1>
