--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login - Notflix</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <h1>Login</h1>
